tests/paczka1/fuzzy1/84568039.err
Error in line 1: CP1dWHZrL A254 48,4
Error in line 14: WOvSp7gXOLE A490 84,2
Error in line 18: CP1dWHZrL A490 23,5
